platform/goldilocks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goldilocks
  labels:
    network-egress-apiserver: "true"
    network-ingress-monitoring: "true"
