platform/goldilocks/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: goldilocks
  namespace: goldilocks
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`goldilocks.wevelsiep.com`)
      kind: Rule
      services:
        - name: goldilocks-dashboard
          port: 80
